상품 카테고리 리스트 조회 rest adapter 및 integration test 케이스 작성